mofifying the menifest file

--- a/k8s/otel-collector-deployment.yaml
+++ b/k8s/otel-collector-deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: otel-collector
         image: otel/opentelemetry-collector-k8s:latest
+        imagePullPolicy: IfNotPresent
         args: ["--config=/etc/otel/otel-collector-config.yaml"]
         volumeMounts:
         - name: otel-config-vol
