--- a/k8s/otel-collector-deployment.yaml
+++ b/k8s/otel-collector-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: otel-collector
-        image: docker.io/otel/opentelemetry-collector-contrib:latest
+        image: otel/opentelemetry-collector-k8s:latest
         imagePullPolicy: IfNotPresent
         args: ["--config=/etc/otel/otel-collector-config.yaml"]
         volumeMounts:
