mofifying the menifest file

--- a/k8s/otel-config.yaml
+++ b/k8s/otel-config.yaml
@@ -12,11 +12,10 @@ data:
           http:
 
     exporters:
-      logging:
-        loglevel: debug
+      debug: {}
 
     service:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [logging]
+          exporters: [debug]
