--- a/k8s/otel-service.yaml
+++ b/k8s/otel-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: otel-collector
-  namespace: otel-collector-observability-test
+  namespace: otel
 spec:
   ports:
     - name: otlp-grpc
