modifying config file

--- a/k8s/otel-config.yaml
+++ b/k8s/otel-config.yaml
@@ -15,7 +15,7 @@ data:
       batch:
 
     exporters:
-      debug:
+      debug:          # Changed from logging to debug
         logLevel: debug
 
     service:
