--- a/k8s/otel-config.yaml
+++ b/k8s/otel-config.yaml
@@ -1,34 +1,44 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: otel-config
-  namespace: otel
+  name: otel-agent-conf
+  labels:
+    app: opentelemetry
+    component: otel-agent-conf
 data:
-  config.yaml: |
+  otel-agent-config: |
     receivers:
       otlp:
         protocols:
           grpc:
+            endpoint: ${env:MY_POD_IP}:4317
           http:
-
+            endpoint: ${env:MY_POD_IP}:4318
+    exporters:
+      otlp:
+        endpoint: "otel-collector.default:4317"
+        tls:
+          insecure: true
+        sending_queue:
+          num_consumers: 4
+          queue_size: 100
+        retry_on_failure:
+          enabled: true
     processors:
       batch:
-
-    exporters:
-      debug:
-        verbosity: detailed
-
+      memory_limiter:
+        # 80% of maximum memory up to 2G
+        limit_mib: 400
+        # 25% of limit up to 2G
+        spike_limit_mib: 100
+        check_interval: 5s
+    extensions:
+      zpages: {}
     service:
+      extensions: [zpages]
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [batch]
-          exporters: [debug]
-        metrics:
-          receivers: [otlp]
-          processors: [batch]
-          exporters: [debug]
-        logs:
-          receivers: [otlp]
-          processors: [batch]
-          exporters: [debug]
+          processors: [memory_limiter, batch]
+          exporters: [otlp]
