--- a/k8s/otel-service.yaml
+++ b/k8s/otel-service.yaml
@@ -2,14 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: otel-collector
-  namespace: otel
+  labels:
+    app: opentelemetry
+    component: otel-collector
 spec:
   ports:
-    - name: otlp-grpc
-      port: 4317
-      targetPort: 4317
-    - name: otlp-http
-      port: 4318
-      targetPort: 4318
+  - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
+    port: 4317
+    protocol: TCP
+    targetPort: 4317
+  - name: otlp-http # Default endpoint for OpenTelemetry HTTP receiver.
+    port: 4318
+    protocol: TCP
+    targetPort: 4318
+  - name: metrics # Default endpoint for querying metrics.
+    port: 8888
   selector:
-    app: otel-collector
+    component: otel-collector
