modifying Otel agent file with correct URL

--- a/k8s/otel-collector-config.yaml
+++ b/k8s/otel-collector-config.yaml
@@ -25,7 +25,7 @@ data:
     extensions:
       zpages: {}
     exporters:
-      otlp:
+      elasticapm:
         endpoint: "http://elastic-apm-server.elastic-system.svc:8200" # Replace with a real endpoint.
         tls:
           insecure: true
