--- a/k8s/otel-collector-config.yaml
+++ b/k8s/otel-collector-config.yaml
@@ -1,38 +1,32 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: otel-collector-conf
+  name: otel-collector-config
+  namespace: otel
   labels:
     app: opentelemetry
-    component: otel-collector-conf
 data:
-  otel-collector-config: |
+  otel-collector-config.yaml: |
     receivers:
       otlp:
         protocols:
           grpc:
-            endpoint: ${env:MY_POD_IP}:4317
           http:
-            endpoint: ${env:MY_POD_IP}:4318
-    processors:
-      batch:
-      memory_limiter:
-        # 80% of maximum memory up to 2G
-        limit_mib: 1500
-        # 25% of limit up to 2G
-        spike_limit_mib: 512
-        check_interval: 5s
-    extensions:
-      zpages: {}
+
     exporters:
+      logging:
+        loglevel: debug
       elastic:
-        apm_server_url: "http://elastic-apm-server.elastic-system.svc:8200" # Replace with a real endpoint.
+        apm_server_url: "http://elastic-apm-server.elastic-system.svc:8200"
         tls:
           insecure: true
+
+    processors:
+      batch:
+
     service:
-      extensions: [zpages]
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [memory_limiter, batch]
-          exporters: [elastic]
+          processors: [batch]
+          exporters: [logging, elastic]
