--- a/k8s/otel-agent-config.yaml
+++ b/k8s/otel-agent-config.yaml
@@ -1,43 +1,28 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: otel-agent-conf
-  labels:
-    app: opentelemetry
-    component: otel-agent-conf
+  name: otel-agent-config
+  namespace: otel
 data:
-  otel-agent-config: |
+  otel-agent-config.yaml: |
     receivers:
       otlp:
         protocols:
           grpc:
-            endpoint: ${env:MY_POD_IP}:4317
           http:
-            endpoint: ${env:MY_POD_IP}:4318
-    exporters:
-      otlp:
-        endpoint: "otel-collector.default:4317"
-        tls:
-          insecure: true
-        sending_queue:
-          num_consumers: 4
-          queue_size: 100
-        retry_on_failure:
-          enabled: true
+
     processors:
       batch:
-      memory_limiter:
-        # 80% of maximum memory up to 2G
-        limit_mib: 400
-        # 25% of limit up to 2G
-        spike_limit_mib: 100
-        check_interval: 5s
-    extensions:
-      zpages: {}
+
+    exporters:
+      otlp:
+        endpoint: otel-collector.otel.svc.cluster.local:4317
+        tls:
+          insecure: true
+
     service:
-      extensions: [zpages]
       pipelines:
         traces:
           receivers: [otlp]
-          processors: [memory_limiter, batch]
+          processors: [batch]
           exporters: [otlp]
