--- a/k8s/otel-collector-deployment.yaml
+++ b/k8s/otel-collector-deployment.yaml
@@ -2,67 +2,37 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: otel-collector
+  namespace: otel
   labels:
     app: opentelemetry
-    component: otel-collector
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: opentelemetry
-      component: otel-collector
-  minReadySeconds: 5
-  progressDeadlineSeconds: 120
-  replicas: 1 #TODO - adjust this to your own requirements
+      component: collector
   template:
     metadata:
       labels:
         app: opentelemetry
-        component: otel-collector
+        component: collector
     spec:
       containers:
-      - command:
-          - "/otelcontribcol"
-          - "--config=/conf/otel-collector-config.yaml"
-        image: vmisra1989/my-otel-contrib:latest
-        name: otel-collector
-        resources:
-          limits:
-            cpu: 1
-            memory: 2Gi
-          requests:
-            cpu: 200m
-            memory: 400Mi
-        ports:
-        - containerPort: 55679 # Default endpoint for ZPages.
-        - containerPort: 4317 # Default endpoint for OpenTelemetry receiver.
-        - containerPort: 14250 # Default endpoint for Jaeger gRPC receiver.
-        - containerPort: 14268 # Default endpoint for Jaeger HTTP receiver.
-        - containerPort: 9411 # Default endpoint for Zipkin receiver.
-        - containerPort: 8888  # Default endpoint for querying metrics.
-        env:
-          - name: MY_POD_IP
-            valueFrom:
-              fieldRef:
-                apiVersion: v1
-                fieldPath: status.podIP
-          - name: GOMEMLIMIT
-            value: 1600MiB
-        volumeMounts:
-        - name: otel-collector-config-vol
-          mountPath: /conf
-#        - name: otel-collector-secrets
-#          mountPath: /secrets
+        - name: otel-collector
+          image: otel/opentelemetry-collector-contrib:latest
+          args:
+            - "--config=/etc/otel/otel-collector-config.yaml"
+          volumeMounts:
+            - name: config
+              mountPath: /etc/otel
+          ports:
+            - containerPort: 4317 # OTLP gRPC
+            - containerPort: 4318 # OTLP HTTP
+            - containerPort: 8888 # Metrics
       volumes:
-        - configMap:
-            name: otel-collector-conf
+        - name: config
+          configMap:
+            name: otel-collector-config
             items:
-              - key: otel-collector-config
+              - key: otel-collector-config.yaml
                 path: otel-collector-config.yaml
-          name: otel-collector-config-vol
-#        - secret:
-#            name: otel-collector-secrets
-#            items:
-#              - key: cert.pem
-#                path: cert.pem
-#              - key: key.pem
-#                path: key.pem
