--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: otel-collector-conf
+  name: otel-collector-config
   namespace: otel
   labels:
     app: opentelemetry
-    component: otel-collector-conf
+    component: otel-collector-config
 data:
-  otel-collector-config: |
+  otel-collector-config.yaml: |
     receivers:
       otlp:
         protocols:
