modifying otel collecvtor config

--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -38,8 +38,8 @@ data:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [logging]
+          exporters: [otlp,logging]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [logging]
+          exporters: [otlp,logging]
