--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -26,7 +26,7 @@ data:
         endpoint: "http://elastic-apm-server.elastic-system.svc:4317"
         tls:
           insecure: true
-      logging:
+      debug:
         loglevel: debug
 
     extensions:
@@ -38,8 +38,8 @@ data:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [otlp,logging]
+          exporters: [otlp,debug]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [otlp,logging]
+          exporters: [otlp,debug]
