modifying otel collecvtor config

--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -27,7 +27,7 @@ data:
         tls:
           insecure: true
       debug:
-        loglevel: debug
+        detailed: detailed
 
     extensions:
       zpages: {}
