--- a/otel-agent-daemonset.yaml
+++ b/otel-agent-daemonset.yaml
@@ -21,8 +21,7 @@ spec:
       containers:
       - name: otel-agent
         image: otel/opentelemetry-collector-contrib:latest
-        command: ["/otelcol-contrib"]
-        args: ["--config=/conf/otel-agent-config.yaml"]
+        command: ["otelcol", "--config", "/etc/otel/otel-agent-config.yaml"]
         resources:
           limits:
             cpu: 500m
