modifying otel collecvtor config

--- a/otel-agent-daemonset.yaml
+++ b/otel-agent-daemonset.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: otel-agent
         image: otel/opentelemetry-collector-contrib:latest
-        command: ["otelcol", "--config", "/etc/otel/otel-agent-config.yaml"]
+        command: ["otelcol-contrib"]
         resources:
           limits:
             cpu: 500m
