adding ne menifest

--- a/only-testyaml-otel-collector-contrib.yaml
+++ b/only-testyaml-otel-collector-contrib.yaml
@@ -40,7 +40,9 @@ data:
 
     exporters:
       otlphttp:
-        endpoint: "http://elastic-apm-server.otel.svc:8200"
+        endpoint: "elastic-apm-server.otel.svc:8200"
+        tls:
+          insecure: true
 
     service:
       pipelines:
