--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -41,7 +41,7 @@ data:
         traces:
           receivers: [otlp]
           processors: [memory_limiter, batch]
-          exporters: [otlp,debug]
+          exporters: [elasticapm,debug]
         metrics:
           receivers: [otlp]
           processors: [memory_limiter, batch]
